# agent-runbook

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: rust.yml
.runbook/: preferences.yaml
apps/site/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json
apps/site/src/components/: Header.astro  HeroCommandCard.astro  ToolCard.astro  ToolSearch.tsx
apps/site/src/layouts/: Layout.astro
apps/site/src/lib/: i18n.ts  tools.ts
apps/site/src/pages/: agents.astro  categories.astro  (+2 more)
apps/web/: app.js  index.html  styles.css  tools.json
data/tools/: act.yaml  adb.yaml  age.yaml  aider.yaml  amp.yaml  ansible.yaml  apk.yaml  apt.yaml  asdf.yaml  ast-grep.yaml  atuin.yaml  awk.yaml  aws.yaml  az.yaml  bacon.yaml  bat.yaml  biome.yaml  bottom.yaml  brew.yaml  broot.yaml  brush.yaml  buf.yaml  bun.yaml  bundle.yaml  capacitor.yaml  cargo-audit.yaml  cargo-binstall.yaml  cargo-clippy.yaml  cargo-deny.yaml  cargo-fmt.yaml  cargo-nextest.yaml  cargo-watch.yaml  cargo.yaml  choco.yaml  clang-format.yaml  clang-tidy.yaml  clang.yaml  claude.yaml  clickhouse.yaml  cmake.yaml  (+166 more)
docs/: roadmap.md
skills/runbook-skill/: SKILL.md
skills/runbook-skill/agents/: openai.yaml
src/: checks.rs  cli.rs  error.rs  interpret.rs  lib.rs  main.rs  model.rs  preferences.rs  registry.rs  render.rs  scan.rs
src/commands/: category.rs  mod.rs  prefer.rs  scan.rs
src/discovery/: command.rs  global.rs  local.rs  mod.rs
src/output/: category.rs  mod.rs  prefer.rs  scan.rs
src/registry/: mod.rs
(+9 files in other folders)
