[package]
name = "agent-runbook"
version = "0.1.3"
edition = "2024"
description = "Generate a local runbook for AI coding agents."
license = "MIT"
repository = "https://github.com/Ariestar/agent-runbook"
readme = "README.md"
keywords = ["ai-agent", "cli", "developer-tools", "runbook"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "data/tools/**",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "runbook"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
